tests/NormalTests/paczka1/fuzzy1/14881427.err
Error in line 6: HBT8 S848 -4,1
Error in line 5: NONOUy9MNv S278 55,6
Error in line 2: JIGbq S313 34,7
Error in line 11: W8ippJKCB S848 14,4
Error in line 20: NONOUy9MNv S134 225,7
Error in line 29: gO2Hp S278 69,5
